Role validation for user management, validation methods moved to a different class for clearity